--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,18 +1,4 @@
 <% if notice %>
 <p id="notice"><%= notice %></p>
 <% end %>
-<h2>Your Faster Than Light Cart</h2>
-<table>
-	<% @cart.line_items.each do |item| %>
-		<tr>
-			<td><%= item.quantity %>&times;</td>
-			<td><%= item.product.title %></td>
-			<td class="item_price"><%= number_to_currency(item.total_price) %></td>
-		</tr>
-	<% end %>
-	<tr class="total_line">
-		<td colspan="2">Total</td>
-		<td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
-	</tr>
-</table>
-<%= button_to 'Empty cart', @cart, method: :delete, data: {confirm: 'Are you sure you would like to delete all items in your cart?' } %>
+<%= render @cart %>
