--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -6,4 +6,5 @@
 		<td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
 	</tr>
 </table>
+<%= button_to "Checkout", new_order_path, method: :get %>
 <%= button_to 'Empty your cart', cart, method: :delete, data: {confirm: 'Are you sure you want to remove all items from your cart?' }%>
