--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -10,7 +10,7 @@
 		border-bottom: 3px dashed #77d;
 	}
 	.entry {
-		overflow: autho;
+		overflow: auto;
 		margin-top: 1em;
 		border-bottom: 1px solid #77d;
 		min-height: 100px;
@@ -26,7 +26,7 @@
 			margin-left: 100px;
 			margin-top: 0;
 			margin-bottom: 2px;
-			color: #277;
+			color: #200;
 		}
 		p, div.price_line {
 			margin-left: 100px;
@@ -37,7 +37,7 @@
 			}
 		}
 		.price {
-			color: #44a;
+			color: #257;
 			font-weight: bold;
 			margin-right: 3em;
 		}
