--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body class='<%= controller.controller_name %>'>
 	<div id="banner">
-		<%= image_tag("logo.png") %>
+		<%= image_tag("logo.JPG") %>
 		<%= @page_title || "Faster Than Light Store" %>
 	</div>
 	<div id="columns">
